--- a/index.html
+++ b/index.html
@@ -4,19 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram Game</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        #game-container {
+            display: flex;
+            flex-wrap: wrap;
+            width: 200px;
+            height: 200px;
+        }
+        .square {
+            width: 100px;
+            height: 100px;
+            background-color: green;
+            margin: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+        }
+        .square.brown {
+            background-color: brown;
+        }
+        #level {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <p>Уровень: <span id="level">1</span></p>
-        <p>Опыт: <span id="experience">0</span></p>
+    <div id="level">Уровень: 1</div>
+    <div id="game-container">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
     </div>
-    <div class="grid">
-        <div class="square" data-user-id="1"></div>
-        <div class="square" data-user-id="1"></div>
-        <div class="square" data-user-id="1"></div>
-        <div class="square" data-user-id="1"></div>
-    </div>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="script.js"></script>
 </body>
 </html>
